--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-
-
-
-
-<div class="TC">
-    <h2>Table of Contents</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
     
-    <p>Levels of milk production per shed and across all sheds.</p>
-    <p>The rate of earnings; monthly/yearly.</p>
-    <p>The comparison of how much is made every month and the difference from the previous rate.</p>
-    <div>
-    
+
+
+
+    <script src="scripts.js"></script>
+</body>
+</html>
