--- a/index.html
+++ b/index.html
@@ -6,9 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+
+
 </head>
 <body>
-    
+    <div class="navbar">
+        <h2></h2>
+        <p></p>
+    </div>
+    <div class="display">
+        <div class="form">
+            <form>
+                <div class="shedA">
+
+                </div>
+                <div class="shedB">
+
+                </div>
+                <div class="shedC">
+
+                </div>
+                <div class="shedD">
+                   
+                </div>
+                <button>Request</button>
+            </form>
+        </div>
+    </div>
 
 
 
