--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="navbar">
         <h2></h2>
-        <p></p>
+        <article></article>
     </div>
     <div class="display">
         <div class="form">
@@ -31,6 +31,24 @@
                 </div>
                 <button>Request</button>
             </form>
+        </div>
+        <div class="reporting">
+            <h2></h2>
+            <article></article>
+
+            <p id="reportA"></p>
+            <P id="reportB"></P>
+            <p id="reportC"></p>
+            <p id="reportD"></p>
+            <p id="dsum"></p>
+            <p id="wsum"></p>
+            <p id="januaryincome"></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
         </div>
     </div>
 
