--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
     </div>
     <div class="display">
         <div class="form">
-            <form>
+            <form action="submit" >
                 <div class="shedA">
-
+                    <label for="shedA">shedA</label>
+                    <input type="number" placeholder="number of litres" id="sa">
                 </div>
                 <div class="shedB">
-
+                    <label for="shedB">shedB</label>
+                    <input type="number" placeholder="number of litres" id="sb">
                 </div>
                 <div class="shedC">
-
+                    <label for="shedC">shedC</label>
+                    <input type="number" placeholder="number of litres" id="sc">
                 </div>
                 <div class="shedD">
-                   
+                    <label for="shedD">shedD</label>
+                    <input type="number" placeholder="number of litres" id="sd">
                 </div>
                 <button>Request</button>
             </form>
@@ -43,12 +47,18 @@
             <p id="dsum"></p>
             <p id="wsum"></p>
             <p id="januaryincome"></p>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
+            <p id="februaryincome"></p>
+            <p id="marchincome"></p>
+            <p id="aprilincome"></p>
+            <p id="mayincome"></p>
+            <p id="juneincome"></p>
+            <p id="julyincome"></p>
+            <p id="augustincome"></p>
+            <p id="septemberincome"></p>
+            <p id="octoberincome"></p>
+            <p id="novemberincome"></p>
+            <p id="decemberincome"></p>
+            <p id="yearlyincome"></p>
         </div>
     </div>
 
