--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div class="navbar">
-        <h2></h2>
-        <article></article>
+        <h2>Dairy Business</h2>
+        <article>Milk production and earnings report.</article>
     </div>
     <div class="display">
         <div class="form">
