--- a/index.html
+++ b/index.html
@@ -14,56 +14,16 @@
         <h2>Dairy Business</h2>
         <article>Milk production and earnings report.</article>
     </div>
-    <div class="display">
-        <div class="form">
-            <form action="submit" >
-                <div class="shedA">
-                    <label for="shedA">shedA</label>
-                    <input type="number" placeholder="number of litres" id="sa">
-                </div>
-                <div class="shedB">
-                    <label for="shedB">shedB</label>
-                    <input type="number" placeholder="number of litres" id="sb">
-                </div>
-                <div class="shedC">
-                    <label for="shedC">shedC</label>
-                    <input type="number" placeholder="number of litres" id="sc">
-                </div>
-                <div class="shedD">
-                    <label for="shedD">shedD</label>
-                    <input type="number" placeholder="number of litres" id="sd">
-                </div>
-                <button>Request</button>
-            </form>
+    <div class="sidebar">
+        <div class="production">
+            <a href="./form.html"> <button>MilkSheet</button></a> 
         </div>
-        <div class="reporting">
-            <h2></h2>
-            <article></article>
-
-            <p id="reportA"></p>
-            <P id="reportB"></P>
-            <p id="reportC"></p>
-            <p id="reportD"></p>
-            <p id="dsum"></p>
-            <p id="wsum"></p>
-            <p id="januaryincome"></p>
-            <p id="februaryincome"></p>
-            <p id="marchincome"></p>
-            <p id="aprilincome"></p>
-            <p id="mayincome"></p>
-            <p id="juneincome"></p>
-            <p id="julyincome"></p>
-            <p id="augustincome"></p>
-            <p id="septemberincome"></p>
-            <p id="octoberincome"></p>
-            <p id="novemberincome"></p>
-            <p id="decemberincome"></p>
-            <p id="yearlyincome"></p>
+        <div class="earnings">
+            <a href="./report.html"> <button>Report</button></a>
         </div>
     </div>
 
-
-
     <script src="scripts.js"></script>
+        
 </body>
 </html>
