--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
                 <label for="shedD">shedD</label>
                 <input type="number" placeholder="number of litres" id="sd">
             </div>
-            <button>Request</button>
+            <button type="submit">Request</button>
         </form>
     </div>
 
