--- a/report.html
+++ b/report.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="reporting">
-        <h2></h2>
-        <article></article>
+        <h2>Report</h2>
+        <article>A report of earnings on milk produced daily, weekly, monthly and yearly on a leap year</article>
 
         <p id="reportA"></p>
         <P id="reportB"></P>
