--- a/index.html
+++ b/index.html
@@ -14,7 +14,25 @@
         <h2>Dairy Business</h2>
         <article>Milk production and earnings report.</article>
     </div>
+    <div class="farm">
+        <h2>FreshMilk Farm</h2>
+        <p>FreshMilk Farm is an initiative started by Erick Muriithi a reknown farmer from the Mt. Kenya regions in Kenya,</p>
+        <p>The farm located in Meru, Kenya, started as a community agricultural sensitization program focusing on Dairy Farming,</p>
+        <p>The project mainly targetted the small-scaled farmers in the pursuit of increasing production to suppliment</p>
+        <p>the local and national production.</p>
+    </div>
+    <div class="farm2">
+        <p>The project was funded by an NGO and private company who wished to invest in the local market and</p>
+        <p>boost manufacturing of dairy products.</p>
+        <p>FreshMilk Farm houses a large herd of dairy cattles and has been seen to mechanise its mode of priduction.</p>
+        <p>Milking is done through milking machines to save on time and energy. The care/ handling of the cattles and farm tools</p> 
+        <p> has been overseen by his productive/ efficient team, who have then ensured consistency in production over the years.</p>
+    </div>
+    
     <div class="sidebar">
+        <div class="next">
+            <h2>The buttons show an average summary in the farm's production levels and earnings;</h2> 
+        </div>
         <div class="production">
             <a href="./form.html"> <button>MilkSheet</button></a> 
         </div>
